--- a/apps/core/templates/core/base.html
+++ b/apps/core/templates/core/base.html
@@ -13,6 +13,12 @@
 
   <nav class="w3-bar w3-blue" role="navigation">
     <a href="/" class="w3-bar-item w3-button w3-mobile">OinkOink</a>
+    {% if user.is_authenticated %}
+      <a href="{% url 'logout' %}" class="w3-bar-item w3-button w3-mobile w3-right">Logout</a>
+    {% else %}
+      <a href="{% url 'signup' %}" class="w3-bar-item w3-button w3-mobile w3-right">Sign up</a>
+      <a href="{% url 'login' %}" class="w3-bar-item w3-button w3-mobile w3-right">Login</a>
+    {% endif %}
   </nav>
 
   <main>
