--- a/apps/core/templates/core/signup.html
+++ b/apps/core/templates/core/signup.html
@@ -5,64 +5,54 @@
 <div class="w3-container w3-white w3-margin w3-padding-large">
 
     {% if form.errors %}
-    {% for error_tag, error_message  in form.errors.items %}
-    {% if error_tag == "__all__" %}
-    <div class="w3-panel w3-red">
-        <p>{{ error_message }}</p>
-    </div>
-    {% endif %}
-    {% endfor %}
-    {% endif %}
-
-    {% if next %}
-    {% if user.is_authenticated %}
-    <p>Your account doesn't have access to this page. To proceed,
-        please login with an account that has access.</p>
-    {% else %}
-    <p>Please login to see this page.</p>
-    {% endif %}
-    {% endif %}
-
-    {% if next %}
-    {% if user.is_authentiated %}
-    <div class="w3-panel w3-red">
-        <p>Your account doesn't have access to this page. To proceed,
-            please login with an account that has access.</p>
-    </div>
-    {% else %}
-    <div class="w3-panel w3-yellow">
-        <p>Please login to this page.</p>
-    </div>
-    {% endif %}
+        {% for error_tag, error_message  in form.errors.items %}
+            {% if error_tag == "__all__" %}
+            <div class="w3-panel w3-red">
+                <p>{{ error_message }}</p>
+            </div>
+            {% endif %}
+        {% endfor %}
     {% endif %}
 
     <div class="w3-container w3-card-4 w3-light-grey">
-        <form method="post">
+        <form method="post" action="." autocomplete="off">
             {% csrf_token %}
             <fieldset class="form-group w3-border-0">
-                <h2>Log In</h2>
+                <h2>Sign up</h2>
+                <p>Enter a username and password.</p>
                 <ul class="w3-ul">
                     <li>
                         <label for="username">{{ form.username.label_tag }}</label>
                         {% if form.username.errors %}<div class="w3-panel w3-red">{{ form.username.errors }}</div>
                         {% endif %}
-                        <input class="w3-input" type="text" id="username" name="username">
+                        <input class="w3-input" type="text" id="username" name="username" autocomplete="off">
                     </li>
                     <li>
-                        {{ form.password.errors }}
-                        <label for="password">{{ form.password.label_tag }}</label>
-                        {% if form.password.errors %}<div class="w3-panel w3-red">{{ form.password.errors }}</div>
+                    <p>Enter a new password</p>
+                        {% comment %} {{ form.password1.errors }} {% endcomment %}
+                        <label for="password1">{{ form.password1.label_tag }}</label>
+                        {% if form.password1.errors %}<div class="w3-panel w3-red">{{ form.password1.errors }}</div> 
                         {% endif %}
-                        <input class="w3-input" type="password" id="password" name="password">
+                        <input class="w3-input" type="password" id="password1" name="password1" autocomplete="new-password">
+                        {% comment %} {% if form.password1.help_text %}
+                            <div class="w3-small">{{ form.password1.help_text|safe }}</div>
+                        {% endif %} {% endcomment %}
                     </li>
                     <li>
-                        <button class="w3-button w3-dark-grey" type="submit">Login</button>
+                        {% comment %} {{ form.password2.errors }} {% endcomment %}
+                        <label for="password2">{{ form.password2.label_tag }}</label>
+                        {% if form.password2.errors %}<div class="w3-panel w3-red">{{ form.password2.errors }}</div>
+                        {% endif %}
+                        <input class="w3-input" type="password" id="password2" name="password2" autocomplete="new-password">
+                        {% comment %} {% if form.password2.help_text %}
+                            <div class="w3-small">{{ form.password2.help_text|safe }}</div>
+                        {% endif %} {% endcomment %}
+                    </li>
+                    <li>
+                        <button class="w3-button w3-dark-grey" type="submit">Sign up</button>
                     </li>
                 </ul>
 
-                <div class="w3-small">
-                    <p><a href="{% url 'password_reset' %}">Lost password?</a></p>
-                </div>
             </fieldset>
 
 
