--- a/apps/core/templates/core/logged_out.html
+++ b/apps/core/templates/core/logged_out.html
@@ -1,10 +1,12 @@
 {% extends 'core/base.html' %}
 
 {% block content %}
-    <div class="w3-panel w3-light-blue">
-        <h4>Logged out!</h4>
-        <div class="w3-small">
-            <p><a href="{% url 'login' %}">Click here to login again.</a></p>
+    <div class="w3-container w3-white w3-margin w3-padding-large">
+        <div class="w3-container w3-card-4 w3-light-grey">
+            <h2>Logged out!</h2>
+            <div class="w3-small">
+                <p><a href="{% url 'login' %}">Click here to login again.</a></p>
+            </div>
         </div>
     </div>
 {% endblock content %}
