--- a/apps/feed/templates/feed/feed.html
+++ b/apps/feed/templates/feed/feed.html
@@ -1,7 +1,66 @@
 {% extends 'core/base.html' %}
 
 {% block content %}
-<div class="w3-container">
+<div class="w3-container" id="feedapp">
   <h1>My Feed</h1>
+  <div class="w3-container w3-card-4 w3-light-grey">
+    <form v-on:submit.prevent="submitOink()">
+        <fieldset class="form-group w3-border-0">
+          <ul class="w3-ul">
+            <li>
+              <textarea v-model="body" cols="100%" rows="10" placeholder="What are you oinking?"></textarea>
+            </li>
+            <li>
+              <button class="w3-button w3-green" type="submit">Submit</button>
+            </li>
+          </ul>
+        </fieldset>
+    </form>
+  </div>
+  <!-- <div class="w3-container"> -->
+    <ul class="w3-ul w3-card-4">
+      <li class="w3-bar" v-for="oink in oinks">
+        <div class="w3-bar-item">
+          <span class="w3-large">[[ oink.oinker ]]</span><br>
+          <span >[[ oink.body ]]</span><br>
+          <span class="w3-small">[[ oink.created_at ]] </span>
+        </div>
+      </li>
+    </ul>
+  <!-- </div> -->
 </div>
 {% endblock content %}
+
+{% block script %}
+<script>
+  new Vue({
+    el: '#feedapp',
+    delimiters: ['[[', ']]'],
+    data() {
+      return {
+        oinks: [],
+        body: '',
+        oinker: '{{ request.user.username }}',
+        created_at: 'Now'
+      }
+    },
+    methods: {
+      submitOink() {
+
+        if (this.body.length > 0) {
+          console.log('submitOink');
+          var oink = {
+            'body': this.body,
+            'oinker': this.oinker,
+            'created_at': this.created_at,
+          };
+
+          this.oinks.unshift(oink);
+        }
+
+        this.body = '';
+      }
+    }
+  })
+</script>
+{% endblock script %}
