--- a/apps/core/templates/core/base.html
+++ b/apps/core/templates/core/base.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+
+{% load static %}
+
 <html lang="en">
 
 <head>
@@ -29,6 +32,9 @@
     {% endblock content%}
   </main>
 
+  <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
+  {% block script %}
+  {% endblock script %}
 </body>
 
 </html>
