--- a/apps/core/templates/core/base.html
+++ b/apps/core/templates/core/base.html
@@ -18,6 +18,7 @@
     <a href="/" class="w3-bar-item w3-button w3-mobile">OinkOink</a>
     {% if user.is_authenticated %}
       <a href="{% url 'feed' %}" class="w3-bar-item w3-button w3-mobile">Feed</a>
+      <a href="{% url 'search' %}" class="w3-bar-item w3-button w3-mobile">Search</a>
     {% endif %}
     {% if user.is_authenticated %}
       <a href="{% url 'logout' %}" class="w3-bar-item w3-button w3-mobile w3-right">Logout</a>
