--- a/apps/feed/templates/feed/feed.html
+++ b/apps/feed/templates/feed/feed.html
@@ -26,7 +26,7 @@
           <div class="w3-bar-item">
             <span class="w3-large">{{ oink.created_by.username }}</span><br>
             <span >{{ oink.body }}</span><br>
-            <span class="w3-small">{{ oink.created_at|naturaltime }}</span>
+            <span class="w3-small w3-text-grey">{{ oink.created_at|naturaltime }}</span>
           </div>
         </li>
       {% endfor %}
