--- a/apps/core/templates/core/base.html
+++ b/apps/core/templates/core/base.html
@@ -22,6 +22,7 @@
     {% endif %}
     {% if user.is_authenticated %}
       <a href="{% url 'logout' %}" class="w3-bar-item w3-button w3-mobile w3-right">Logout</a>
+      <a href="{% url 'oinkerprofile' request.user.username %}" class="w3-bar-item w3-button w3-mobile w3-right">Profile</a>
     {% else %}
       <a href="{% url 'signup' %}" class="w3-bar-item w3-button w3-mobile w3-right">Sign up</a>
       <a href="{% url 'login' %}" class="w3-bar-item w3-button w3-mobile w3-right">Login</a>
