--- a/apps/oinkerprofile/templates/oinkerprofile/oinkerprofile.html
+++ b/apps/oinkerprofile/templates/oinkerprofile/oinkerprofile.html
@@ -7,6 +7,15 @@
   <h1>Profile</h1>
   <div class="w3-container w3-card-4 w3-light-grey">
     <h2>{{ user.username }} </h2>
+    <p>Followers: {{ user.oinkerprofile.followed_by.count }} </p>
+    <p>Follows: {{ user.oinkerprofile.follows.count }} </p>
+    {% if user != request.user %}
+      {% if request.user.oinkerprofile in user.oinkerprofile.followed_by.all %}
+        <a href="{% url 'unfollow_oinker' user.username %}" class="w3-button w3-red w3-margin">Unfollow</a>
+      {% else %}
+        <a href="{% url 'follow_oinker' user.username %}" class="w3-button w3-green w3-margin">Follow</a>
+      {% endif %}
+    {% endif %}
   </div>
 
   <div>
