--- a/apps/feed/templates/feed/search.html
+++ b/apps/feed/templates/feed/search.html
@@ -20,16 +20,10 @@
     </form>
   </div>
 
-  <div>
-    <ul class="w3-ul w3-card-4">
-      {% for oinker in oinkers %}
-        <li class="w3-bar">
-          <div class="w3-bar-item">
-            <span >{{ oinker.username }}</span>
-          </div>
-        </li>
-      {% endfor %}
-    </ul>
+  <div class="w3-bar-block w3-card-4">
+    {% for oinker in oinkers %}
+      <a class="w3-bar-item w3-button w3-large w3-border" href="{% url 'oinkerprofile' oinker.username %}">{{ oinker.username }}</a>
+    {% endfor %}
   </div>
 </div>
 {% endblock content %}
