--- a/apps/oinkerprofile/templates/oinkerprofile/follows.html
+++ b/apps/oinkerprofile/templates/oinkerprofile/follows.html
@@ -4,19 +4,19 @@
 
 {% block content %}
 <div class="w3-container">
-    <h1>Followers</h1>
+    <h1>Follows</h1>
     <div class="w3-container w3-card-4 w3-light-grey">
         <h2>{{ user.username }} </h2>
-        <p>Num: {{ user.oinkerprofile.followed_by.count }} </p>
+        <p>Num: {{ user.oinkerprofile.follows.count }} </p>
     </div>
     <div class="w3-bar-block w3-card-4">
-        {% for oinker in user.oinkerprofile.followed_by.all %}
+        {% for oinker in user.oinkerprofile.follows.all %}
             <a class="w3-bar-item w3-button w3-large w3-border" href="{% url 'oinkerprofile' oinker.user.username %}">{{ oinker.user.username }}</a>
         {% empty %}
             {% if request.user == user %}
-                <p class="w3-bar-item w3-large">Sorry, you don't have any followers!</p>
+                <p class="w3-bar-item w3-large">Sorry, are not following anyone!</p>
             {% else %}
-                <p class="w3-bar-item w3-large">{{ user.username}} doesn't have any followers!</p>
+                <p class="w3-bar-item w3-large">{{ user.username}} doesn't follow anyone!</p>
             {% endif %}
         {% endfor %}
     </div>
