--- a/apps/core/templates/core/base.html
+++ b/apps/core/templates/core/base.html
@@ -16,9 +16,13 @@
 
   <nav class="w3-bar w3-blue" role="navigation">
     <a href="/" class="w3-bar-item w3-button w3-mobile">OinkOink</a>
+    <form action="{% url 'search' %}" method="get">
+      <input class="w3-bar-item w3-input w3-mobile w3-light-gray" type="text" name="query" id="query" value="{{ query }}">
+      <button class="w3-bar-item w3-button w3-light-blue w3-mobile">Search</button>
+    </form>
     {% if user.is_authenticated %}
       <a href="{% url 'feed' %}" class="w3-bar-item w3-button w3-mobile">Feed</a>
-      <a href="{% url 'search' %}" class="w3-bar-item w3-button w3-mobile">Search</a>
+      <a href="{% url 'conversations' %}" class="w3-bar-item w3-button w3-mobile">Conversations</a>
     {% endif %}
     {% if user.is_authenticated %}
       <a href="{% url 'logout' %}" class="w3-bar-item w3-button w3-mobile w3-right">Logout</a>
