--- a/apps/oinkerprofile/templates/oinkerprofile/oinkerprofile.html
+++ b/apps/oinkerprofile/templates/oinkerprofile/oinkerprofile.html
@@ -15,6 +15,7 @@
     <p><a href="{% url 'followers' user.username %}">Followers: {{ user.oinkerprofile.followed_by.count }}</a></p>
     <p><a href="{% url 'follows' user.username %}">Follows: {{ user.oinkerprofile.follows.count }}</a></p>
     {% if user != request.user %}
+      <a href="{% url 'conversation' user.id %}" class="w3-button w3-blue w3-margin">Send message</a>
       {% if request.user.oinkerprofile in user.oinkerprofile.followed_by.all %}
         <a href="{% url 'unfollow_oinker' user.username %}" class="w3-button w3-red w3-margin">Unfollow</a>
       {% else %}
