--- a/apps/core/templates/core/base.html
+++ b/apps/core/templates/core/base.html
@@ -21,6 +21,7 @@
       <button class="w3-bar-item w3-button w3-light-blue w3-mobile">Search</button>
     </form>
     {% if user.is_authenticated %}
+      <a href="{% url 'notifications' %}" class="w3-bar-item w3-button w3-mobile">Notifications ({{ notifications.count }})</a>
       <a href="{% url 'feed' %}" class="w3-bar-item w3-button w3-mobile">Feed</a>
       <a href="{% url 'conversations' %}" class="w3-bar-item w3-button w3-mobile">Conversations</a>
     {% endif %}
